scroll function and small corrections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(press)
 export(pw_init)
 export(reload)
 export(screenshot)
+export(scroll)
 export(select_option)
 export(set_input_files)
 export(type)
